<resources>
    <string name="app_name" translatable="false">Criminal Intent</string>
    <string name="crime">Crime</string>
    <string name="crime_title_hint">Enter a title for the crime.</string>
    <string name="crime_title_label">Title</string>
    <string name="crime_details_label">Details</string>
    <string name="crime_solved_label">Solved</string>
    <string name="add">Add</string>
    <string name="crime_title">Crime Title</string>
    <string name="crime_date">Crime Date</string>
    <string name="police">Police</string>

    <string name="crime_solved">Solved</string>
    <string name="date_picker_title">Date of crime</string>
    <string name="ok">OK</string>

    <string name="new_crime">New Crime</string>
    <string name="show_subtitle">Show Subtitle</string>
    <string name="hide_subtitle">Hide Subtitle</string>
    <string name="subtitle_format">%1$d crimes</string>
    <string name="require_police">Require police?</string>
    <string name="delete">Delete</string>
    <string name="add_crime">Add Crime</string>
    <string name="crime_suspect_text">Choose Suspect</string>
    <string name="crime_report_text">Send Crime Report</string>
    <string name="crime_report">%1$s!
        The crime was discovered on %2$s. %3$s, and %4$s
    </string>
    <string name="crime_report_solved">The case is solved</string>
    <string name="crime_report_unsolved">The case is not solved</string>
    <string name="crime_report_suspect">there suspect is %s.</string>
    <string name="crime_report_no_suspect">there is no suspect</string>
    <string name="crime_report_subject">CriminalIntent Crime Report</string>
    <string name="send_report">Send crime report via</string>
    <string name="crime_picture_descibe">Crime picture</string>
    <string name="get_photo_description">Get photo of crime</string>
    <string name="detail_photo_title">Crime Photo</string>

    // Made spryazeniya
    <plurals name="subtitle_plural">
        <item quantity="one">%1$d crime</item>
        <item quantity="other">%1$d crimes</item>
    </plurals>
</resources>
