<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="my.rockpilgrim.criminalintent.data.ConstantsKt" />
        <import type="android.view.View" />
        <variable
            name="crime"
            type="my.rockpilgrim.criminalintent.data.Crime" />
    </data>

    <LinearLayout
        android:orientation="vertical"
        android:paddingVertical="@dimen/margin_horizontal"
        android:paddingHorizontal="@dimen/margin_horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">
                <ImageView
                    android:id="@+id/crimePhoto"
                    android:src="@drawable/ic_baseline_image_24"
                    android:layout_width="80dp"
                    android:layout_weight="1"
                    android:layout_height="0dp"
                    android:scaleType="fitCenter"
                    android:cropToPadding="true"
                    android:contentDescription="@string/crime_picture_descibe" />

                <ImageButton
                    android:id="@+id/crimeCameraButton"
                    android:layout_width="match_parent"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_photo_camera"
                    android:contentDescription="@string/get_photo_description" />

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:paddingVertical="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/crime_title_label"
                    style="?android:listSeparatorTextViewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/crimeTitle"
                    android:text="@{crime.title}"
                    android:hint="@string/crime_title_hint"
                    android:paddingVertical="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:text="@string/crime_details_label"
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/crimeDateButton"
            app:dateFormat="@{crime.date}"
            tools:text="@string/add"
            android:textColor="@color/colorAccent"
            style="@style/Widget.AppCompat.ButtonBar"
            android:textAllCaps="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <CheckBox
                android:id="@+id/crimeSolved"
                android:text="@string/crime_solved_label"
                android:checked="@{crime.solved}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <CheckBox
                android:id="@+id/crimePolice"
                android:text="@string/require_police"
                android:checked="@{crime.requiresPolice==ConstantsKt.POLICE? true:false}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <Button
            android:id="@+id/crimeSuspect"
            android:text="@string/crime_suspect_text"
            android:textColor="@color/colorAccent"
            style="@style/Widget.AppCompat.ButtonBar"
            android:textAllCaps="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/crimeReport"
            android:text="@string/crime_report_text"
            android:textColor="@color/colorAccent"
            style="@style/Widget.AppCompat.ButtonBar"
            android:textAllCaps="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/deleteButton"
            android:text="@string/delete"
            android:textColor="@color/colorAccent"
            android:textAllCaps="false"
            android:visibility="@{crime.title.empty? View.GONE:View.VISIBLE}"
            android:backgroundTint="#FFB45F"
            android:layout_gravity="end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>
</layout>